Fix align last menu item.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2261,9 +2261,13 @@ a {
 	font-weight: normal;
 }
 
-.knd-header-nav .sub-menu .menu-item-has-children .sub-menu-left {
+.knd-header-nav > .menu .menu-item-has-children .sub-menu-left {
 	left: auto;
 	right: 100%;
+}
+
+.knd-header-nav > .menu > .menu-item-has-children > .sub-menu-left {
+	right: -20px;
 }
 
 body:not(.dom-loaded) .knd-header-nav .sub-menu {
